2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/Rate_Reply__c.object-meta.xml
<CustomObject>
    <description>Inbound rate reply</description>
    <label>Rate Reply</label>
    <nameField>
        <displayFormat>RR/{YY}/{MM}/{0000}</displayFormat>
        <label>Rate Reply ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Replies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>