2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/A_POE__c.field-meta.xml
<CustomField>
    <fullName>A_POE__c</fullName>
    <description>Air Port of Entry for DS Air Shipment</description>
    <label>APOE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>