2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Additional_Notes_OS__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_OS__c</fullName>
    <defaultValue>&quot;- Stair Carry charges only applicable to items that require stair carry walk up to 2nd floor and above without elevator&quot; &amp; BR() &amp;
&quot;- Long Carry applies to long carry walk of more than 50 meters&quot; &amp; BR() &amp;
&quot;- **WH (in/out) - Loose Load is a one-time charge&quot;</defaultValue>
    <label>Additional Notes OS</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>