2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Additional_services_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_services_1__c</fullName>
    <label>Additional services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Handyman</fullName>
            </value>
            <value>
                <fullName>Re-delivery</fullName>
            </value>
            <value>
                <fullName>w/hse handling in/out</fullName>
            </value>
            <value>
                <fullName>Normal storage</fullName>
            </value>
            <value>
                <fullName>Air-con storage</fullName>
            </value>
            <value>
                <fullName>Piano handling</fullName>
            </value>
            <value>
                <fullName>Safe handling</fullName>
            </value>
            <value>
                <fullName>Maid Service</fullName>
            </value>
            <value>
                <fullName>Difficult access</fullName>
            </value>
            <value>
                <fullName>Shuttling</fullName>
            </value>
            <value>
                <fullName>Pet Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>