2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agent who request the rate</description>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rate Reply</relationshipLabel>
    <relationshipName>R00N2000000120ehEAA</relationshipName>
    <type>Lookup</type>
</CustomField>