2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <defaultValue>&quot;Do not enter anything&quot;</defaultValue>
    <label>Agent Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>