2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of agent requesting rates</description>
    <inlineHelpText>Name of agent requesting rates</inlineHelpText>
    <label>Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rate Reply</relationshipLabel>
    <relationshipName>R00N2000000121wnEAA</relationshipName>
    <type>Lookup</type>
</CustomField>