2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/CFS_LCL_NVOCC__c.field-meta.xml
<CustomField>
    <fullName>CFS_LCL_NVOCC__c</fullName>
    <defaultValue>&quot;US$ 150.00 / cbm gross&quot;</defaultValue>
    <description>CFS / LCL / NVOCC rate</description>
    <label>CFS/LCL/NVOCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>