2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <defaultValue>&quot;Do not enter anything&quot;</defaultValue>
    <description>Compang name of agent</description>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>