2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Consign__c.field-meta.xml
<CustomField>
    <fullName>Consign__c</fullName>
    <defaultValue>&quot;Helu-Trans (S) Pte Ltd&quot; &amp; BR() &amp;
&quot;39 Tanjong Pagar Distripark Block 2&quot; &amp; BR() &amp;
&quot;#02-04, Keppel Road&quot; &amp; BR() &amp;
&quot;Singapore 089065&quot; &amp; BR() &amp;
&quot;Tel: (65) 6225 5448&quot; &amp; BR() &amp;
&quot;Fax: (65) 6273 2282&quot; &amp; BR() &amp;
&quot;For: Shipper name as appeared in passport&quot;</defaultValue>
    <description>Consignment details</description>
    <label>Consign</label>
    <type>TextArea</type>
</CustomField>