2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Consign_Diplomat__c.field-meta.xml
<CustomField>
    <fullName>Consign_Diplomat__c</fullName>
    <defaultValue>&quot;Name of Embassy&quot; &amp; BR() &amp;
&quot;Full Address in Singapore&quot; &amp; BR() &amp;
&quot;Telephone / Fax&quot; &amp; BR() &amp;
&quot;For:  Shipper&apos;s name (as appeared in passport)&quot;</defaultValue>
    <description>Consignment for Diplomatic Shipment</description>
    <label>Consign (Diplomat)</label>
    <type>TextArea</type>
</CustomField>