2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Crating__c.field-meta.xml
<CustomField>
    <fullName>Crating__c</fullName>
    <defaultValue>&quot;USD 85.00 per cubic meter gross&quot; &amp; BR() &amp;
&quot;(minimum chargeable 2 cubic meters gross)&quot;</defaultValue>
    <label>Crating</label>
    <type>TextArea</type>
</CustomField>