2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Select the currency used for the quotation</description>
    <inlineHelpText>Currency to be used for the quotation</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>