2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date of quotation</description>
    <inlineHelpText>Date of quotation</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>