2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Density_Factor__c.field-meta.xml
<CustomField>
    <fullName>Density_Factor__c</fullName>
    <defaultValue>&quot;6.50 net lbs per cubic foot, or 230 net lbs per cubic meter&quot;</defaultValue>
    <label>Density Factor</label>
    <type>TextArea</type>
</CustomField>