2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Density_Factor_Air__c.field-meta.xml
<CustomField>
    <fullName>Density_Factor_Air__c</fullName>
    <defaultValue>&quot;10.40 air chargeable lbs per cubic foot gross&quot;</defaultValue>
    <description>Density Factor for Air</description>
    <label>Density Factor (Air)</label>
    <type>TextArea</type>
</CustomField>