2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Density_Factor_OS__c.field-meta.xml
<CustomField>
    <fullName>Density_Factor_OS__c</fullName>
    <defaultValue>&quot;6.50 net lbs per cubic foot, or 230 net lbs per cubic meter&quot; &amp; BR() &amp;
&quot;10.40 air chargeable lbs per cubic foot gross&quot;</defaultValue>
    <description>Density Factor for OS</description>
    <label>Density Factor OS</label>
    <type>TextArea</type>
</CustomField>