2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Dest_THC__c.field-meta.xml
<CustomField>
    <fullName>Dest_THC__c</fullName>
    <label>Dest THC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
                <default>true</default>
                <label>Included</label>
            </value>
            <value>
                <fullName>USD 180 / 20&apos;</fullName>
            </value>
            <value>
                <fullName>USD  250 / 40&apos;</fullName>
            </value>
            <value>
                <fullName>USD 0.15 / chargeable KG</fullName>
            </value>
            <value>
                <fullName>USD 0.20 / chargeable kg</fullName>
            </value>
            <value>
                <fullName>USD 40 / cbm gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>