2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Destination_Services_2__c.field-meta.xml
<CustomField>
    <fullName>Destination_Services_2__c</fullName>
    <label>Destination Services 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>