2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Destination_Services__c.field-meta.xml
<CustomField>
    <fullName>Destination_Services__c</fullName>
    <defaultValue>&quot;DESTINATION THC IF NOT PREPAID: &quot; &amp; BR() &amp;
&quot;SHUTTLING SERVICES WILL BE REQUIRED:&quot; &amp; BR() &amp;
&quot;Note: Shuttling 3rd party &amp; other additional local ancillary services rendered here will be subjected to GST 7%&quot; &amp; BR() &amp;
&quot;Private apartments here require non refundable fees for lift usage of approx US$ 15.00 - 50.00 which we will invoice back at costs with supporting receipts.&quot;</defaultValue>
    <label>Destination Services</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>