2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Documents_required_for_Customs_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Documents_required_for_Customs_Clearance__c</fullName>
    <defaultValue>&quot;- Passport copy&quot; &amp; BR() &amp;
&quot;- Employment pass or In principle of Approval letter from Ministry of Manpower, Singapore&quot; &amp; BR() &amp;
&quot;- Declaration of facts (attached)&quot; &amp; BR() &amp;
&quot;- Detailed Wine list (if included in shipment) - Custom duties &amp; GST will apply &quot;</defaultValue>
    <label>Documents required for Customs Clearance</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>