2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume__c</fullName>
    <description>Estimated Volume</description>
    <label>Estimated Volume</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>