2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Estimated_Weight__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Weight__c</fullName>
    <description>Estimated Weight</description>
    <label>Estimated Weight</label>
    <type>TextArea</type>
</CustomField>