2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Exclusions_DS__c.field-meta.xml
<CustomField>
    <fullName>Exclusions_DS__c</fullName>
    <defaultValue>&quot;- Port storage / demurrage&quot; &amp; BR() &amp;
&quot;- Import customs duties and government taxes&quot; &amp; BR() &amp;
&quot;- Insurance&quot; &amp; BR() &amp;
&quot;- Custom inspection fee&quot; &amp; BR() &amp;
&quot;- Censorship fees for video cassettes, alcohol handling and related expenses&quot; &amp; BR() &amp;
&quot;- Multiple consignee or deliveries&quot; &amp; BR() &amp;
&quot;- Handling of piano, heavy weights (i.e. safe) and oversized objects&quot; &amp; BR() &amp;
&quot;- Hoisting, shuttle service due to difficult access&quot; &amp; BR() &amp;
&quot;- X-ray conducted by custom at port&quot; &amp; BR() &amp;
&quot;- Stair carries, long carries&quot;</defaultValue>
    <description>Exclusions information for DS</description>
    <label>Exclusions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>