2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Exclusions_OS__c.field-meta.xml
<CustomField>
    <fullName>Exclusions_OS__c</fullName>
    <defaultValue>&quot;- Multiple or split pick up addresses&quot; &amp; BR() &amp;
&quot;- Insurance&quot; &amp; BR() &amp;
&quot;- Heavy lift, stair carry, long carry, hoisting, piano handling, fumigation etc, will be quoted separately If required&quot; &amp; BR() &amp;
&quot;- Price applies for work done on normal work hours on weekdays only.&quot; &amp; BR() &amp; 
&quot;Additional charges will apply for work carried out on weekends / public holidays&quot; &amp; BR() &amp;
&quot;- Any third party services, such as handyman, electrician, maid services etc, will be quoted separately if required&quot;</defaultValue>
    <label>Exclusions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>