2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>__</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>net</fullName>
            </value>
            <value>
                <fullName>loose</fullName>
            </value>
            <value>
                <fullName>gross</fullName>
            </value>
            <value>
                <fullName>loose loaded</fullName>
            </value>
            <value>
                <fullName>liftvan loaded</fullName>
            </value>
            <value>
                <fullName>acwt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>