2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Follow_Up_Completed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Completed</label>
    <type>Checkbox</type>
</CustomField>