2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <defaultValue>&quot;US$ 1850.00 / 20&apos;&quot; &amp; BR() &amp;
&quot;(lump sum excluding BAF, PRS, PSS, GRI etc)&quot; &amp; BR() &amp;
&quot;&amp; destination THC&quot; &amp; BR() &amp;
&quot;WE WILL ADVISE/FORWARD THE NOTIFICATIONS/CIRCULARS IMPOSED BY&quot; &amp; BR() &amp; &quot;SHIPPING LINES ONCE WE HAVE THEM FROM THE CARRIERS&quot;</defaultValue>
    <label>Freight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>