2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Important_Note_Diplomat__c.field-meta.xml
<CustomField>
    <fullName>Important_Note_Diplomat__c</fullName>
    <defaultValue>&quot;Diplomatic shipment is usually given free duty/tax entry into Singapore.&quot; &amp; BR() &amp; 
&quot;The shipper must provide copies of his/her Diplomatic ID card and passport as proof of identity.&quot; &amp; BR() &amp; 
&quot;Shipment/s has to arrive within six (6) months of shipper’s arrival in Singapore to qualify for GST tax relief and other pertinent documents in order.&quot;</defaultValue>
    <description>Important Note for Diplomatic Shipment</description>
    <label>Important Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>