2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Important_Notes_LCL__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes_LCL__c</fullName>
    <defaultValue>&quot;- Shipment/s has to arrive within six(6) months of shipper&apos;s employment pass approval date / arrival in Singapore to qualify for GST tax relief and other pertinent documents in order&quot; &amp; BR() &amp;
&quot;- CFS/LCL/NVOCC charges are dependent on which Forwarder/NVOCC you use and we will invoice you back at cost as per outlay&quot; &amp; BR() &amp;
&quot;- Most houses/villas/apartments in Singapore have very poor unloading and road access and hence, shuttle service is usually required&quot;</defaultValue>
    <description>Important Notes for LCL</description>
    <label>Important Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>