2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Inclusions_OS__c.field-meta.xml
<CustomField>
    <fullName>Inclusions_OS__c</fullName>
    <defaultValue>&quot;- Packing, wrapping, loading, export  customs clearance, export customs documentation&quot; &amp; BR() &amp;
&quot;- Free temporary storage at origin country for up to 2 weeks from completion of packing at residence (if required)&quot;</defaultValue>
    <label>Inclusions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>