2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <label>Initials</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>