2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/ISPM15__c.field-meta.xml
<CustomField>
    <fullName>ISPM15__c</fullName>
    <defaultValue>&quot;USD 280.00 per shipment&quot;</defaultValue>
    <label>ISPM15</label>
    <type>TextArea</type>
</CustomField>