2nd training/Community/Community/Community1/force-app/main/default/objects/Rate_Reply__c/fields/Mode_3__c.field-meta.xml
<CustomField>
    <fullName>Mode_3__c</fullName>
    <label>Mode 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>20&apos; FCL</fullName>
            </value>
            <value>
                <fullName>40&apos; FCL</fullName>
            </value>
            <value>
                <fullName>40 HC</fullName>
            </value>
            <value>
                <fullName>20&apos; + 40&apos;</fullName>
            </value>
            <value>
                <fullName>40&apos; + 40&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>